update active status and mark as read